--- a/event-manager/src/main/webapp/index.html
+++ b/event-manager/src/main/webapp/index.html
@@ -153,6 +153,13 @@
     <script src="scripts/app/entities/organizer/organizer-detail.controller.js"></script>
     <script src="scripts/components/entities/organizer/organizer.service.js"></script>
     <script src="scripts/components/entities/organizer/organizer.search.service.js"></script>
+    <script src="scripts/app/entities/event/event.js"></script>
+    <script src="scripts/app/entities/event/event.controller.js"></script>
+    <script src="scripts/app/entities/event/event-dialog.controller.js"></script>
+    <script src="scripts/app/entities/event/event-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/event/event-detail.controller.js"></script>
+    <script src="scripts/components/entities/event/event.service.js"></script>
+    <script src="scripts/components/entities/event/event.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
